<resources>
    <string name="app_name">Jamscope</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_to_jamscope">Welcome to Jamscope!</string>
    <string name="login_please">Login to last.fm to continue</string>
    <string name="login">Login</string>
    <string name="back">Back</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_visibilty">Password visibility</string>
    <string name="invalid_user_password">Invalid username or password</string>
    <string name="you_are_not_connected_error">You are not connected to the internet</string>
    <string name="connection_error">Connection failed. Please try again.</string>
    <string name="unknown_error">Unknown error! Please report or try again later</string>
    <string name="too_many_requests">Too many requests! Try again later</string>
    <string name="server_error">Internal server error. Try again later</string>
    <string name="profile_pic_description">%1$s\'s profile pic</string>
    <string name="logout">Logout</string>
    <string name="hello_string">Hello, %1$s!</string>
    <string name="friends">Friends</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="no_friends">You currently don\'t have any friend on last.fm!\nNote: this is usually a last.fm error. Refreshing the page should fix it</string>
    <string name="no_recent_tracks">No recent tracks</string>
    <string name="unknown_album">Unknown album</string>
    <string name="minute_ago">%d minute ago</string>
    <string name="minutes_ago">%d minutes ago</string>
    <string name="one_hour_ago">An hour ago</string>
    <string name="hours_ago">%d hours ago</string>
    <string name="one_day_ago">A day ago</string>
    <string name="days_ago">%d days ago</string>
    <string name="now_playing">Now playing</string>
    <string name="sort_button">Open sort row</string>
    <string name="sort_by">Sort by</string>
    <string name="recently_played">Recently played</string>
    <string name="alphabetically">Alphabetically</string>
    <string name="default_sort">Default</string>
    <string name="selected">Selected</string>
    <string name="friend_listening_widget">See what your friend is listening to!</string>
    <string name="select_friend_widget">Select a friend to add to the widget</string>
    <string name="select_button">Select</string>
    <string name="friend_name_description_widget">Friend is listening to:</string>
    <string name="song_name_description">Song name</string>
    <string name="artist_name_description">Artist name</string>
    <string name="album_name_description">Album name</string>
    <string name="time_description_widget">An hour ago</string>
    <string name="no_friend_selected">No friend selected</string>
    <string name="please_select_a_friend">Please select a friend</string>
    <string name="friend_listening_to">%1$s is listening to:</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="ok">@android:string/ok</string>
    <string name="now">Now</string>
    <string name="friend_listening_widget_label">Friend</string>
    <string name="refresh_button">Refresh button</string>
    <string name="never_updated">Never updated</string>
    <string name="last_updated_on">Last updated on %1$s</string>
    <string name="friend_group_listening_widget">See what a group of friends is listening to!</string>
    <string name="friend_group_widget_label">Friend group</string>
    <string name="friend_name">Friend name</string>
    <string name="select_group_friend_widget">Select up to four friends to add to the widget</string>
    <string name="please_select_group_friend">Please select at least two friends</string>
    <string name="max_four_friends_warning">You can\'t select more than 4 friends</string>
    <string name="open_user_profile">Open user profile</string>
    <string name="recent_tracks">Recent tracks</string>
    <string name="pro" translatable="false">PRO</string>
    <string name="scrobbles">%1$s scrobbles</string>
    <string name="see_more">See more</string>
    <string name="fail_fetch_friend">Failed to fetch user friends</string>
    <string name="login_required_error">Your profile privacy is not set to public</string>
    <string name="no_music_player">No music player is installed</string>
    <string name="error_loading_profile">Unable to load profile</string>
    <string name="user">User</string>
    <string name="open_settings_screen">Open settings screen</string>
    <string name="palette_icon">Palette icon</string>
    <string name="card_colored_background_setting">Enable background color on cards</string>
    <string name="playing_animation_setting">Show playing animations</string>
    <string name="animation_play_icon">Animation icon</string>
    <string name="background_update_setting">Enable background update</string>
    <string name="update_icon">Update icon</string>
    <string name="personalization_setting_title">Personalization</string>
    <string name="theme_icon">Theme icon</string>
    <string name="app_theme_setting">App theme</string>
    <string name="theme_system_default_auto">System default</string>
    <string name="about_setting_tile">About</string>
    <string name="account_setting_tile">Account</string>
    <string name="delete_account_setting">Delete account</string>
    <string name="last_fm_delete_account" translatable="false">https://www.last.fm/settings/account/delete</string>
    <string name="log_out_icon">Log out icon</string>
    <string name="open_setting_tile">Open setting</string>
    <string name="log_out_confirmation">Do you really want to log out?</string>
    <string name="log_out_supporting_text">You will need to log in again to continue using the app.\nNote: this will delete all your data</string>
    <string name="yes">@android:string/yes</string>
    <string name="coffee_icon">Coffee icon</string>
    <string name="support_this_app_setting">Support this app</string>
    <string name="buy_me_a_coffee">Buy me a coffe</string>
    <string name="info_icon">Info icon</string>
    <string name="github_project_link" translatable="false">https://github.com/muriloonunes/jamscope</string>
    <string name="bug_report_icon">Bug report icon</string>
    <string name="report_bug_setting">Report a bug</string>
    <string name="suggest_feature_icon">Suggest feature icon</string>
    <string name="suggest_feature_setting">Suggest a feature</string>
    <string name="select_theme">Select a theme</string>
    <string name="light_theme">Light</string>
    <string name="dark_theme">Dark</string>
    <string name="no_email_app_found">No email app found</string>
    <string name="create_account">Don\'t have an account? Create one</string>
    <string name="open_create_account">Open create account page</string>
    <string name="open_more_menu">Open more options menu</string>
    <string name="liking_app_text">Liking this app?</string>
    <string name="liking_app_expanded_text">Consider leaving a review on PlayStore :)</string>
    <string name="no_not_today_review">No, not today</string>
    <string name="star_icon">Star icon</string>
    <string name="libraries_icon">Libraries icon</string>
    <string name="show_libraries_setting">Open-source libraries</string>
    <string name="image_saved">Image saved in gallery</string>
    <string name="image_not_saved">Failed to save image</string>
    <string name="save_image_button">Save image button</string>
    <string name="song_by_artist">"%1$s by %2$s"</string>
    <string name="changelog">Changelog</string>
    <string name="dismiss">Dismiss</string>
    <string name="not_found">%1$s not found</string>
    <string name="full_changelog">Full changelog on GitHub</string>
    <string name="version">Version %1$s</string>
    <string name="unknown">unknown</string>
    <string name="thanks_for_using">Thanks for using Jamscope!</string>
    <string name="about_app">This app was built with love for those who love music and socializing. I hope you enjoy ♡</string>
    <string name="made_by">Made (with love) by</string>
    <string name="contact">Contact</string>
    <string name="see_code_github">Check out the code on GitHub</string>
    <string name="see_license">License</string>
    <string name="connection_timeout">The connection took too long. Check your internet connection and try again</string>
    <string name="show_changelog">Show changelog</string>
</resources>